sig-auth/capabilities_exclude_all/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: "RuntimeDefault"
      capabilities:
        drop: [
          # Must be set to "ALL" in restricted
          "SYS_ADMIN",
        ]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
